# cppwinrt_cmake_demo

./: .gitignore  App.cpp  App.h  App.idl  App.xaml  CMakeLists.txt  HelloCpp.sln  HelloCpp.vcxproj  HelloCpp.vcxproj.filters  HelloCpp_TemporaryKey.pfx  LICENSE  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  OpenGLESPage.cpp  OpenGLESPage.h  OpenGLESPage.xaml  Package.appxmanifest  readme.txt
